# notification-py

./: README.md  custom_types.py  pyproject.toml
notification_py/: __init__.py  custom_types.py  main.py
notification_py/services/: discord.py  email.py  slack.py
src/: __init__.py  custom_types.py  main.py
src/services/: discord.py  email.py  slack.py
tests/: test_discord.py  test_email.py  test_main.py  test_slack.py
