[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["Pranav Soni <pranav.bhawan@gmail.com>"]
readme = "README.md"
packages = [
{include = "src"},
{include = "custom_types.py"}
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
aiohttp = "^3.9.3"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
aiosmtplib = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
